force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__AccumulatedDepreciation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AccumulatedDepreciation__c</fullName>
    <inlineHelpText>Total Amount of Depreciation since Deprecation Start Date till now</inlineHelpText>
    <label>ACCUMULATED DEPRECIATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>