force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__AssetCost__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AssetCost__c</fullName>
    <inlineHelpText>Include Purchasing Price, Tax, Shipping, Setup Fee</inlineHelpText>
    <label>ASSET COST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>