force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__AssetUsefulLifeYear__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__AssetUsefulLifeYear__c</fullName>
    <label>ASSET USEFUL LIFE(YEAR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>