force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__DepreciationBookBalance__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepreciationBookBalance__c</fullName>
    <inlineHelpText>Depreciation book balance=Asset costs-Accumulated depreciation</inlineHelpText>
    <label>DEPRECIATION BOOK BALANCE</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>