force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__DepreciationEndDate__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepreciationEndDate__c</fullName>
    <label>DEPRECIATION END DATE</label>
    <type>Date</type>
</CustomField>