force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__DepreciationExpenseName__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepreciationExpenseName__c</fullName>
    <label>DEPRECIATION EXPENSE NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>