force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__DepreciationMethod__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DepreciationMethod__c</fullName>
    <label>DEPRECIATION METHOD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>clofor_com_cfs__DepreciationMethod</valueSetName>
    </valueSet>
</CustomField>