force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__PurchasingInvoiceID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__PurchasingInvoiceID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>PURCHASING INVOICE ID</label>
    <referenceTo>clofor_com_cfs__PurchasingInvoice__c</referenceTo>
    <relationshipLabel>DEPRECIATION EXPENSE</relationshipLabel>
    <relationshipName>DepreciationExpense</relationshipName>
    <type>Lookup</type>
</CustomField>