force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/fields/clofor_com_cfs__RemainedDepreciation__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__RemainedDepreciation__c</fullName>
    <inlineHelpText>Remained depreciation=Depreciation basis-Accumulated depreciation</inlineHelpText>
    <label>REMAINED DEPRECIATION</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>