force-app/main/default/objects/clofor_com_cfs__DepreciationExpense__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__DepreciationExpenseName__c</columns>
    <columns>clofor_com_cfs__DepreciationMethod__c</columns>
    <columns>clofor_com_cfs__DeprecationFormula__c</columns>
    <columns>clofor_com_cfs__AssetUsefulLifeYear__c</columns>
    <columns>clofor_com_cfs__AssetCost__c</columns>
    <columns>clofor_com_cfs__SalvageValue__c</columns>
    <columns>clofor_com_cfs__DepreciationBasis__c</columns>
    <columns>clofor_com_cfs__AccumulatedDepreciation__c</columns>
    <columns>clofor_com_cfs__RemainedDepreciation__c</columns>
    <columns>clofor_com_cfs__DepreciationBookBalance__c</columns>
    <columns>clofor_com_cfs__AccumulatedDepreciationFromRecording__c</columns>
    <columns>clofor_com_cfs__FacilityAssetID__c</columns>
    <columns>clofor_com_cfs__TruckFleetAssetID__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>